[project]
name = "playwright-bnh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "rich>=14.3.3",
    "seleniumbase>=4.47.4",
    "sqlalchemy>=2.0.48",
]
